// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenu should be rendered correctly 1`] = `
<nav
  className="root uui-mainmenu-container container"
>
  <button
    className="container uui-button-box uui-enabled root type-primary fontSansSemibold"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
</nav>
`;

exports[`MainMenu should be rendered correctly with props 1`] = `
<nav
  className="root uui-mainmenu-container container uui-mainmenu-transparent"
>
  <button
    className="container uui-button-box uui-enabled root type-primary fontSansSemibold"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={-1}
  />
  <div
    className="uui-mainmenu-server-badge"
  >
    <div
      className="uui-mainmenu-server-badge-label"
      style={
        Object {
          "background": "#39b7ac",
        }
      }
    >
      Dev
    </div>
  </div>
</nav>
`;
